LS.Infrastructure/LS.Terraform/environments/dev/rds_inbound_access_rules.tf
resource "aws_vpc_security_group_ingress_rule" "internal_services_to_rds" {
  for_each = var.api_services_config

  security_group_id = module.ls_framework_rds_sql_server.ls_framework_sqlserver_sg_id

  referenced_security_group_id = module.ls_framework_core_shared_ressources[each.key].ls_framework_ecs_service_sg_id

  from_port   = 1433
  to_port     = 1433
  ip_protocol = "tcp"

  description = "${each.key} to SQL Server"
}

resource "aws_vpc_security_group_ingress_rule" "worker_to_rds" {

  security_group_id = module.ls_framework_rds_sql_server.ls_framework_sqlserver_sg_id

  referenced_security_group_id = module.ls_framework_worker_service.ls_framework_worker_sg_id

  from_port = 1433
  to_port   = 1433

  ip_protocol = "tcp"

  description = "Worker Service to SQL Server"
}
